GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK( Contact.MailingAddress ) ,&apos;&apos;, (Contact.MailingStreet &amp;&quot; &quot;&amp;Contact.MailingCity &amp;&quot;, &quot;&amp; Contact.MailingState &amp;&quot; &quot;&amp;Contact.MailingPostalCode &amp;&quot; &quot;&amp;Contact.MailingCountry))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>