GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_First_Name__c</fullName>
    <label>Alternate First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>