GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_ID__c.field-meta.xml
<CustomField>
    <fullName>Alternate_ID__c</fullName>
    <label>Alternate ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>