GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Last_Name__c</fullName>
    <description>Alternate Contact name</description>
    <label>Alternate Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>