GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Middle_Name__c</fullName>
    <description>Alternate Contact Name</description>
    <label>Alternate Middle Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>