GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone1__c</fullName>
    <label>Alternate Phone1</label>
    <type>Phone</type>
</CustomField>