GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone2__c</fullName>
    <label>Alternate Phone2</label>
    <type>Phone</type>
</CustomField>