GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Alternate_Phone3__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone3__c</fullName>
    <label>Alternate Phone3</label>
    <type>Phone</type>
</CustomField>