GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/AMST_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AMST_Instructions__c</fullName>
    <inlineHelpText>Assessment Instructions</inlineHelpText>
    <label>AMST Instructions</label>
    <type>TextArea</type>
</CustomField>