GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/APPL_Deadline__c.field-meta.xml
<CustomField>
    <fullName>APPL_Deadline__c</fullName>
    <label>APPL Deadline</label>
    <type>Date</type>
</CustomField>