GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/ASMT_Type__c.field-meta.xml
<CustomField>
    <fullName>ASMT_Type__c</fullName>
    <inlineHelpText>Assessment Type</inlineHelpText>
    <label>ASMT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face To Face</fullName>
            </value>
            <value>
                <fullName>Telephonic</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>