GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Assessment_Language__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>