GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Assigned_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Nurse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Assigned Nurse)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>