GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Aux__c.field-meta.xml
<CustomField>
    <fullName>Aux__c</fullName>
    <label>Aux File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>