GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Benefit_HRS_Used__c.field-meta.xml
<CustomField>
    <fullName>Benefit_HRS_Used__c</fullName>
    <description>Benefit Hours Used</description>
    <label>Benefit HRS Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>