GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>Billed_Date__c</fullName>
    <label>Billed Date</label>
    <type>Date</type>
</CustomField>