GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Code__c</fullName>
    <label>Billing Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>