GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/CA_PNTP_Approved__c.field-meta.xml
<CustomField>
    <fullName>CA_PNTP_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is CA Partnership Approved</inlineHelpText>
    <label>CA PNTP Approved</label>
    <type>Checkbox</type>
</CustomField>