GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Calculated_Age__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Age__c</fullName>
    <label>Calculated Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>