GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Case_Address__c.field-meta.xml
<CustomField>
    <fullName>Case_Address__c</fullName>
    <label>Case Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>