GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>