GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <inlineHelpText>This field is used for search</inlineHelpText>
    <label>Claimant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>