GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <description>Claimant/Applicant Address</description>
    <label>Client Address</label>
    <type>TextArea</type>
</CustomField>