GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <description>Claimant/Applicant DOB</description>
    <label>Client DOB</label>
    <type>Date</type>
</CustomField>