GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <description>Cliamant/Applicant Email Address</description>
    <label>Client Email</label>
    <type>Email</type>
</CustomField>