GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <description>Claimant/Applicant Name</description>
    <label>Client First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>