GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Full_Name__c</fullName>
    <description>Client&apos;s full name</description>
    <formula>Contact.FirstName &amp;&apos; &apos;&amp;Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Full Name</label>
    <type>Text</type>
</CustomField>