GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <description>Cliamant/Applicant</description>
    <label>Client Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>