GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone1__c</fullName>
    <description>Claimant/Applicant Phone</description>
    <label>Client Phone1</label>
    <type>Phone</type>
</CustomField>