GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone2__c</fullName>
    <description>Claimant/Applicant Phone2</description>
    <label>Client Phone2</label>
    <type>Phone</type>
</CustomField>