GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_Phone3__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone3__c</fullName>
    <label>Client Phone3</label>
    <type>Phone</type>
</CustomField>