GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Client_SSN__c.field-meta.xml
<CustomField>
    <fullName>Client_SSN__c</fullName>
    <description>Claimant/Applicant SSN</description>
    <label>Client SSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>