GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Clients_DOB__c.field-meta.xml
<CustomField>
    <fullName>Clients_DOB__c</fullName>
    <description>Birthdate from Contact</description>
    <formula>Contact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client&apos;s DOB</label>
    <type>Date</type>
</CustomField>