GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>When the Case goes to Complete which represents the date it is sent to Accounting for billing</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>