GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/confirmation_number__c.field-meta.xml
<CustomField>
    <fullName>confirmation_number__c</fullName>
    <label>Confirmation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>