GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Connect__c.field-meta.xml
<CustomField>
    <fullName>Connect__c</fullName>
    <label>Connect #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>