GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <label>Contact Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Alternate Contact</fullName>
            </value>
            <value>
                <fullName>Facility Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>