GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Coversheet_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Coversheet_Fax_Number__c</fullName>
    <description>Assigns number to send fax to as Global Number or Provider Fax number if provided</description>
    <!--<formula>IF( ISBLANK(Provider_Fax__c) , $Label.Default_Fax_Number , Provider_Fax__c)</formula>-->
    <label>Coversheet Fax Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>