GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Date_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application__c</fullName>
    <defaultValue>(today())</defaultValue>
    <description>Date Claimant/Applicant Applied</description>
    <label>Date of Application</label>
    <type>Date</type>
</CustomField>