GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Date_Processing_Ended__c.field-meta.xml
<CustomField>
    <fullName>Date_Processing_Ended__c</fullName>
    <label>Date Processing Ended</label>
    <type>Date</type>
</CustomField>