GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <description>Date details were sent to Insurance Company</description>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>