GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/DUP_Check_Performed__c.field-meta.xml
<CustomField>
    <fullName>DUP_Check_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Duplicate Check Performed</description>
    <label>DUP Check Performed</label>
    <type>Checkbox</type>
</CustomField>