GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Duplicate_of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate of</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Duplicate Requests</relationshipLabel>
    <relationshipName>DuplicateCases</relationshipName>
    <type>Lookup</type>
</CustomField>