GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/DX__c.field-meta.xml
<CustomField>
    <fullName>DX__c</fullName>
    <description>Diagnosis</description>
    <inlineHelpText>Diagnosis</inlineHelpText>
    <label>DX</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>