GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Fax_Status__c.field-meta.xml
<CustomField>
    <fullName>Fax_Status__c</fullName>
    <label>Fax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>