GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Followup_Count__c.field-meta.xml
<CustomField>
    <fullName>Followup_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Follow-up Attempts Made</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>