GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/FREQ_Of_Calls__c.field-meta.xml
<CustomField>
    <fullName>FREQ_Of_Calls__c</fullName>
    <inlineHelpText>Frequency of Calls</inlineHelpText>
    <label>FREQ Of Calls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>