GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    
    <label>Gender</label>
    <type>Text</type>
    <length>25</length>
</CustomField>