GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Group_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Account_Id__c</fullName>
    <formula>Account.Parent.Id</formula>
    <label>Group Account Id</label>
    <type>Text</type>
</CustomField>