GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/ICG_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ICG_Schedule__c</fullName>
    <inlineHelpText>Informal Caregiver Schedule</inlineHelpText>
    <label>ICG Schedule</label>
    <type>TextArea</type>
</CustomField>