GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/In_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>In_Review_Reason__c</fullName>
    <label>In Review Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>