GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>