GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Intake_Request_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request_Open_Days__c</fullName>
    <formula>TODAY() - DATEVALUE( Date_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Request Open Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>