GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Intake_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request_Stage__c</fullName>
    <label>Intake Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake Processing</fullName>
                <default>true</default>
                <label>Intake Processing</label>
            </value>
            <value>
                <fullName>Locate Field Nurse</fullName>
            </value>
            <value>
                <fullName>Send Paperwork</fullName>
            </value>
            <value>
                <fullName>Schedule Appointment</fullName>
            </value>
            <value>
                <fullName>Perform Assessment</fullName>
            </value>
            <value>
                <fullName>Receive Assessment</fullName>
            </value>
            <value>
                <fullName>Process Paperwork</fullName>
            </value>
            <value>
                <fullName>Process Assessment</fullName>
            </value>
            <value>
                <fullName>Send Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>