GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Intake_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Intake_Review_Reason__c</fullName>
    <label>Intake Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Duplicate</fullName>
            </value>
            <value>
                <fullName>Potential Auxiliary File</fullName>
            </value>
            <value>
                <fullName>Potential Additional File</fullName>
            </value>
            <value>
                <fullName>Missing Required Fields</fullName>
            </value>
            <value>
                <fullName>Special Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>