GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Agency__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Agency__c</fullName>
    <label>Interpreter Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>