GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Charge_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Charge_To_Customer__c</fullName>
    <label>Interpreter Charge To Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>