GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Contact__c</fullName>
    <label>Interpreter Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>