GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Fax__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Fax__c</fullName>
    <label>Interpreter Fax</label>
    <type>Phone</type>
</CustomField>