GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Language__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Language__c</fullName>
    <label>Interpreter Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>