GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Phone__c</fullName>
    <label>Interpreter Phone</label>
    <type>Phone</type>
</CustomField>