GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Interpreter_Price__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Price__c</fullName>
    <label>Interpreter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>