GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Is_ICA__c.field-meta.xml
<CustomField>
    <fullName>Is_ICA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify Claims Intake Requests with BLI.Interview.Interview Type==ICA</description>
    <label>Is ICA</label>
    <type>Checkbox</type>
</CustomField>