GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Is_ICG_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Is_ICG_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Informal Caregiver Scheduled</inlineHelpText>
    <label>Is ICG Scheduled</label>
    <type>Checkbox</type>
</CustomField>