GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/MIN_ADL_REQ__c.field-meta.xml
<CustomField>
    <fullName>MIN_ADL_REQ__c</fullName>
    <inlineHelpText>Minimum ADL Requirement</inlineHelpText>
    <label>MIN ADL REQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>