GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Next_Follow_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date_Time__c</fullName>
    <label>Next Follow Up Date Time</label>
    <type>DateTime</type>
</CustomField>