GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Nurse_Referral_Stage__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Referral_Stage__c</fullName>
    <label>Nurse Referral Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round0</fullName>
                <default>true</default>
                <label>Round0</label>
            </value>
            <value>
                <fullName>Round1</fullName>
            </value>
            <value>
                <fullName>Round2</fullName>
            </value>
            <value>
                <fullName>Round3</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>RecommendedOffer</fullName>
            </value>
            <value>
                <fullName>SPRound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>