GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Online_Scheduling_Number__c.field-meta.xml
<CustomField>
    <fullName>Online_Scheduling_Number__c</fullName>
    <label>Online Scheduling Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>