GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>