GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>