GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <description>Primary contact Email</description>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>