GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Primary_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Last_Name__c</fullName>
    <description>Primary Contact Name</description>
    <label>Primary Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>