GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Primary_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone1__c</fullName>
    <description>Primary Contact Phone</description>
    <label>Primary Phone1</label>
    <type>Phone</type>
</CustomField>