GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Primary_Phone3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone3__c</fullName>
    <label>Primary Phone3</label>
    <type>Phone</type>
</CustomField>