GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>CCNA /APD</description>
    <label>Product Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>