GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact__c</fullName>
    <label>Provider Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>