GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Provider_Fax__c</fullName>
    <description>Stores Provider Fax number for Special Services. Used for API Request</description>
    <label>Provider Fax</label>
    <type>Phone</type>
</CustomField>