GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>