GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill In Full</fullName>
            </value>
            <value>
                <fullName>No Bill</fullName>
            </value>
            <value>
                <fullName>Bill Cancelled Fee.</fullName>
                <isActive>false</isActive>
                <label>Bill Cancelled Fee.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>