GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Related To)</relationshipLabel>
    <relationshipName>RelatedTo</relationshipName>
    <type>Lookup</type>
</CustomField>