GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Reminder_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Email Sent</label>
    <type>Checkbox</type>
</CustomField>