GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Requester_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requester Email Sent</label>
    <type>Checkbox</type>
</CustomField>