GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <inlineHelpText>Requestor&apos;s Name</inlineHelpText>
    <label>Requestor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>